# Shelly

./: .gitignore  CMakeLists.txt  README.md  Shelly.ui  ShellyPlugin.cpp  ShellyPlugin.h  ShellyPlugin.pro  ShellyPlugin.qrc  qjsonmodel.cpp  qjsonmodel.h  simplecrypt.cpp
